--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Front end bootcamp ..</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <!-- Navbar -->
+
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
     <div class="container">
       
       <a href="#" class="navbar-brand"> Frontend bootcamp</a>
@@ -33,7 +35,19 @@
 
  
 
-  
+    <!-- ShowCase -->
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
+      <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+          <div><h1>Become a <span class="text-warning">Web Developer</span> </h1>
+          <p class="lead my-4">We focus on teaching our students the fundamentals of the latest and greatest technology to prepare them for their first dev role </p>
+          <button class="btn btn-primary btn-lg">Start Enrollment</button>
+          </div>
+          <img class="img-fluid w-50  d-none d-sm-block" src="img/showcase.svg" alt="showcase img">
+        </div>
+      </div>
+      
+    </section>
 
 
 
