instructors Section Added

--- a/index.html
+++ b/index.html
@@ -267,6 +267,86 @@
       </div>
 
     </section>
+
+
+    <!-- instructors -->
+
+    <section id="instructors" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">Our Instructors</h2>
+        <p class="lead text-center text-white mb-5">Our instructors all have 5+ years working as a web developer in the
+          industry</p>
+        <div class="row g-4">
+
+          <!-- instructor1 -->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/67.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">John Doe</h3>
+                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit et pariatur iste? Culpa quam doloremque fugit, quo illum fugiat ratione iusto natus consequatur nisi.</p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i></a>
+
+              </div>
+            </div>
+          </div>
+
+          <!-- instructor2 -->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/women/31.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Angela james</h3>
+                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit et pariatur iste? Culpa quam doloremque fugit, quo illum fugiat ratione iusto natus consequatur nisi.</p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i></a>
+
+              </div>
+            </div>
+          </div>
+
+
+          <!-- instructor3 -->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/37.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Jimmy Haul</h3>
+                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit et pariatur iste? Culpa quam doloremque fugit, quo illum fugiat ratione iusto natus consequatur nisi.</p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i></a>
+
+              </div>
+            </div>
+          </div>
+
+
+          <!-- instructor4 -->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/women/27.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Marry janes</h3>
+                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit et pariatur iste? Culpa quam doloremque fugit, quo illum fugiat ratione iusto natus consequatur nisi.</p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i></a>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
   
 
 
