--- a/index.html
+++ b/index.html
@@ -349,6 +349,56 @@
     </section>
   
 
+    <!-- contact-us  -->
+    <section class="p-5 ">
+      <div class="container ">
+        <div class="row g-4 justify-content-center align-items-center">
+          <div class="col-md-6 ">
+            <h2 class="text-center mb-4 ">
+              Contact-Info
+            </h2>
+            <ul class="list-group list-group-flush lead ">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 50 Main st, Boston MA
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Phone:</span> (555) 555-5555
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span> DummyLobaas254@gmail.com
+              </li>  
+              <li class="list-group-item">
+                <span class="fw-bold">Student Email:</span> SammyLobaeys253@gmail.com
+              </li>  
+
+
+            </ul>
+
+
+          </div>
+
+          <div class="col-md-6 ">
+            <img src="/img/showcase.svg" width="400px" height="400px" >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Frontend Bootcamp &copy; 2024</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+      </div>
+
+    </footer>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
